--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-jest": "^29.1.2",
     "jest": "^29.1.2",
     "jest-environment-jsdom": "^29.1.2",
+    "jest-mock-axios": "^4.7.0-beta2",
     "vue-jest": "^3.0.4"
   }
 }
